--- a/Server/testing.html
+++ b/Server/testing.html
@@ -4,19 +4,8 @@
 </head>
 
 <body>
+<h2>User Operations</h2>
 <table>
-  <tr><form action="getSessions.php" method="get">
-    <td>Get Sessions</td>
-    <td><input type="submit" value="Go"></td>
-    <td>Token: <input type="text" name="token"></td>
-    <td>Saved? <input type="text" name="saved" value="yes"></td>
-  </form></tr>
-  <tr><form action="getSessionNotes.php" method="get">
-    <td>Get Session Notes</td>
-    <td><input type="submit" value="Go"></td>
-    <td>Token: <input type="text" name="token"></td>
-    <td>Session: <input type="text" name="session_id"></td>
-  </form></tr>
   <tr><form action="newUser.php" method="get">
     <td>New User</td>
     <td><input type="submit" value="Go"></td>
@@ -24,5 +13,55 @@
     <td>Password: <input type="text" name="password"></td>
   </form></tr>
 </table>
+
+<h2>Session Operations</h2>
+<table>
+  <tr><form action="newSession.php" method="get">
+    <td>New User</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Token: <input type="text" name="token"></td>
+    <td>Sessio Name: <input type="text" name="session_name"></td>
+    <td>PassCode: <input type="text" name="passcode"></td>
+  </form></tr>
+  
+  <tr><form action="getSessions.php" method="get">
+    <td>Get Sessions</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Token: <input type="text" name="token"></td>
+    <td>Saved? <input type="text" name="saved" value="yes"></td>
+  </form></tr>
+  
+  <tr><form action="getSessionNotes.php" method="get">
+    <td>Get Session Notes</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Token: <input type="text" name="token"></td>
+    <td>Session ID: <input type="text" name="session_id"></td>
+  </form></tr>
+
+  <tr><form action="joinSession.php" method="get">
+    <td>Join Session</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Token: <input type="text" name="token"></td>
+    <td>Session ID: <input type="text" name="session_id"></td>
+  </form></tr> 
+</table>
+
+<h2>Note Operations</h2>
+<table>
+  <tr><form action="newNote.php" method="get">
+    <td>New Note</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Token: <input type="text" name="token"></td>
+    <td>Note Name: <input type="text" name="note_name"></td>
+    <td>Session ID (Optional): <input type="text" name="session_id"></td>
+  </form></tr>
+  
+  <tr><form action="getNote.php" method="get">
+    <td>Get Note</td>
+    <td><input type="submit" value="Go"></td>
+    <td>Note ID: <input type="text" name="note_id"></td>
+  </form></tr>
+</table>
+
 </body>
 </html>
