Added options for modifying refresh times.

--- a/Server/testing.html
+++ b/Server/testing.html
@@ -18,6 +18,17 @@
     <td>username: <input type="text" name="username"></td>
     <td>password: <input type="text" name="password"></td>
   </form></tr></table>
+  <tr><form action="getRefreshTime.php" method="get">
+    <td>Get Refresh Time (getRefreshTime.php)</td>
+    <td><input type="submit" value="Go"></td>
+    <td>token: <input type="text" name="token"></td>
+  </form></tr></table>
+  <tr><form action="setRefreshTime.php" method="get">
+    <td>Set Refresh Time (setRefreshTime.php)</td>
+    <td><input type="submit" value="Go"></td>
+    <td>token: <input type="text" name="token"></td>
+    <td>refresh_time: <input type="text" name="refresh_time"></td>
+  </form></tr></table>
 
 <h2>Session Operations</h2>
 <table>
