getSessions now returns location information. Testing includes location setting when creating session.

--- a/Server/testing.html
+++ b/Server/testing.html
@@ -38,6 +38,9 @@
     <td>token: <input type="text" name="token"></td>
     <td>session_name: <input type="text" name="session_name"></td>
     <td>passcode: <input type="text" name="passcode"></td>
+    <td>latitude (float): <input type="text" name="latitude"></td>
+    <td>longitude (float): <input type="text" name="longitude"></td>
+    <td>radius (int): <input type="text" name="radius"></td>
   </form></tr>
   
   <tr><form action="getSessions.php" method="get">
