--- a/Server/testing.html
+++ b/Server/testing.html
@@ -37,10 +37,10 @@
     <td><input type="submit" value="Go"></td>
     <td>token: <input type="text" name="token"></td>
     <td>session_name: <input type="text" name="session_name"></td>
-    <td>passcode: <input type="text" name="passcode"></td>
-    <td>latitude (float): <input type="text" name="latitude"></td>
-    <td>longitude (float): <input type="text" name="longitude"></td>
-    <td>radius (int): <input type="text" name="radius"></td>
+    <td>passcode (blank for none): <input type="text" name="passcode"></td>
+    <td>latitude (float, blank for none): <input type="text" name="latitude"></td>
+    <td>longitude (float, blank for none): <input type="text" name="longitude"></td>
+    <td>radius (int, blank for none): <input type="text" name="radius"></td>
   </form></tr>
   
   <tr><form action="getSessions.php" method="get">
