Added ability to retrieve sessions a user is not enrolled in.

--- a/Server/testing.html
+++ b/Server/testing.html
@@ -47,7 +47,7 @@
     <td>Get Sessions (getSessions.php)</td>
     <td><input type="submit" value="Go"></td>
     <td>token: <input type="text" name="token"></td>
-    <td>saved ("yes" or blank) <input type="text" name="saved" value="yes"></td>
+    <td>saved ("yes", "no", or blank) <input type="text" name="saved" value="yes"></td>
   </form></tr>
   
   <tr><form action="getSessionNotes.php" method="get">
