Added leave session capability, modified a comment in joinSession to reflect its actual purpose

--- a/Server/testing.html
+++ b/Server/testing.html
@@ -63,6 +63,12 @@
     <td>token: <input type="text" name="token"></td>
     <td>session_id: <input type="text" name="session_id"></td>
     <td>passcode (leave blank if none): <input type="text" name="passcode"></td>
+  </form></tr>   
+  <tr><form action="leaveSession.php" method="get">
+    <td>Leave Session (leaveSession.php)</td>
+    <td><input type="submit" value="Go"></td>
+    <td>token: <input type="text" name="token"></td>
+    <td>session_id: <input type="text" name="session_id"></td>
   </form></tr> 
 </table>
 
