Added flush to testing page

--- a/Server/testing.html
+++ b/Server/testing.html
@@ -89,5 +89,13 @@
   </form></tr>
 </table>
 
+<h2>Other Operations</h2>
+<table>
+  <tr><form action="flush.php" method="get">
+    <td>Flush (flush.php)</td>
+    <td><input type="submit" value="Go"></td>
+  </form></tr>
+</table>
+
 </body>
 </html>
